ENTERPRISE-689: Allow user to provide custom JVM options via `JAVA_OPTIONS` env variable.
Previously, the default settings were used based on the amount of memory of host (in < JDK 10).
Moreover, there was no option how to set custom settings.

We introduce a new `JAVA_OPTIONS` variable which can be used to customize all JVM/Java settings,
not just memory.

Use it like this:

```
docker run -p3103:3003 -m 500M -e JAVA_OPTIONS='-Xmx300m' --name codescene empear/debian-onprem
VM settings:
    Max. Heap Size: 300.00M
    Ergonomics Machine Class: server
    Using VM: OpenJDK 64-Bit Server VM
```